# htraceray

./: .gitignore  Image.hs  LICENSE  Light.hs  Main.hs  Matrix.hs  Object.hs  README.md  Ray.hs  Util.hs  Vector.hs  htraceray.cabal  stack.yaml  todo.txt
app/: Main.hs
src/: AABB.hs  Config.hs  FileIO.hs  Image.hs  Light.hs  Material.hs  Matrix.hs  Object.hs  Ray.hs  Transform.hs  Util.hs
