name:                htraceray
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mdm/htraceray#readme
license:             BSD3
license-file:        LICENSE
author:              Marc Dominik Migge
maintainer:          marcmigge@gmx.net
copyright:            (c) 2014 Marc Dominik Migge
category:             Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Image Light Matrix Object Ray Util Vector
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , JuicyPixels
  default-language:    Haskell2010

executable htraceray-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , htraceray
  default-language:    Haskell2010

test-suite htraceray-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , htraceray
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mdm/htraceray
